--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang='ja'>
 <head>
 <meta charset='utf-8'>
-<title>Interactive Soundtrack with HTML5 Web Audio API</title>
+<title>RE[A]CT - Interactive Soundtrack with HTML5 Web Audio API</title>
 
-<meta name='keywords' content="HTML5">
+<meta name='keywords' content="HTML5 audio JavaScript">
 <meta name='description' content="">
 <meta name='author' content="Shinnosuke Watanabe">
 
@@ -24,6 +24,8 @@ if(typeof jQuery === 'undefined'){
   document.write(unescape("%3Cscript src='js/jquery.js'%3E%3C/script%3E"));
 } 
 </script>
+<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
+
 <script src='js/prefixfree.js'></script>
 <script src='js/jquery.easing.min.js'></script>
 <script src='js/jquery-collision.min.js'></script>
@@ -32,12 +34,12 @@ if(typeof jQuery === 'undefined'){
 
 <script src='js/mousetrap.min.js'></script>
 <script src='js/buffer-loader.js'></script>
-<script src='js/functions.js'></script>
+<script src='js/react.js'></script>
 <script src='js/fullscreen.js'></script>
 
 </head>
 <body>
-  <script type="text/javascript">
+<script type="text/javascript">
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-36461297-3']);
   _gaq.push(['_trackPageview']);
@@ -47,13 +49,30 @@ if(typeof jQuery === 'undefined'){
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
-  </script>
+</script>
 <div id='container'>
   <div id='welcome'>
     マウスで画面のどこかを<br>
     クリックしてみてください
   </div>
 </div>
+<footer>
+  <div id='track-control'>
+    <div id='track-control-pause' class='icon-pause'></div>
+  </div>
+  <div id='volume'>
+    <section id='bg_volume'>
+      <span class="tooltip"></span>   
+      <div class="slider"></div>  
+      <span class="icon_volume"></span>
+    </section>
+    <section id='se_volume'>
+      <div class="slider"></div>  
+      <span class="icon_volume"></span>
+    </section>
+  </div>
+  <div id='shortcut'></div>
+</footer>
 </body>
 
 </html>
