カーソルの変更タイミングの修正

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang='ja'>
 <head>
 <meta charset='utf-8'>
-<title>RE[A]CT - Interactive Soundtrack with HTML5 Web Audio API</title>
+<title>RE(A)CT - Sound Interaction with HTML5 Web Audio API</title>
 
 <meta name='keywords' content="HTML5 audio JavaScript">
 <meta name='description' content="">
