--- a/index.html
+++ b/index.html
@@ -1,78 +1,74 @@
 <!DOCTYPE html>
-<html lang='ja'>
-<head>
-<meta charset='utf-8'>
-<title>RE(A)CT - Sound Interaction with HTML5 Web Audio API</title>
+<html>
 
-<meta name='keywords' content="HTML5 audio JavaScript">
-<meta name='description' content="">
-<meta name='author' content="Shinnosuke Watanabe">
+  <head>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Re-a-ct : [For Google Chrome Only] Sound Interaction Expreriment with HTML5 Web Audio API" />
 
-<meta property='og:type' content='website' />
-<meta property='og:url' content="" />
-<meta property='og:image' content="" />
-<meta property='og:description' content="" />
-<meta property='og:site_name' content="" />
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-<link href='css/normalize.css' rel='stylesheet' media='screen' />
-<link href='css/styles.css' rel='stylesheet' media='screen' />
+    <title>Re-a-ct</title>
+  </head>
 
-<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js'></script>
-<script>
-if(typeof jQuery === 'undefined'){
-  console.log("fail to load from CDN");
-  document.write(unescape("%3Cscript src='js/jquery.js'%3E%3C/script%3E"));
-} 
-</script>
-<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
+  <body>
 
-<script src='js/prefixfree.js'></script>
-<script src='js/jquery.easing.min.js'></script>
-<script src='js/jquery-collision.min.js'></script>
-<script src='js/jquery-css-transform.js'></script>
-<script src='js/jquery-animate-css-rotate-scale.js'></script>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/shinnn/re-a-ct">View on GitHub</a>
 
-<script src='js/mousetrap.min.js'></script>
-<script src='js/buffer-loader.js'></script>
-<script src='js/react.js'></script>
-<script src='js/fullscreen.js'></script>
+          <h1 id="project_title">Re-a-ct</h1>
+          <h2 id="project_tagline">[For Google Chrome Only] Sound Interaction Expreriment with HTML5 Web Audio API</h2>
 
-</head>
-<body>
-<script type="text/javascript">
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-36461297-3']);
-  _gaq.push(['_trackPageview']);
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/shinnn/re-a-ct/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/shinnn/re-a-ct/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
 
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-</script>
-<div id='container'>
-  <div id='welcome'>
-    マウスで画面のどこかを<br>
-    クリックしてみてください
-  </div>
-</div>
-<footer>
-  <div id='track-control'>
-    <div id='track-control-pause' class='icon-pause'></div>
-  </div>
-  <div id='volume'>
-    <section id='bg_volume'>
-      <span class="tooltip"></span>   
-      <div class="slider"></div>  
-      <span class="icon_volume"></span>
-    </section>
-    <section id='se_volume'>
-      <div class="slider"></div>  
-      <span class="icon_volume"></span>
-    </section>
-  </div>
-  <div id='shortcut'></div>
-</footer>
-</body>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h3>Welcome to GitHub Pages.</h3>
 
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+
+<pre><code>$ cd your_repo_root/repo_name
+$ git fetch origin
+$ git checkout gh-pages
+</code></pre>
+
+<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+
+<h3>Designer Templates</h3>
+
+<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+
+<h3>Rather Drive Stick?</h3>
+
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+
+<h3>Authors and Contributors</h3>
+
+<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+
+<h3>Support or Contact</h3>
+
+<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+      </section>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Re-a-ct maintained by <a href="https://github.com/shinnn">shinnn</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+    
+
+  </body>
 </html>
