--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@ if(typeof jQuery === 'undefined'){
 </div>
 
 <div id='side-menu'>
-  <ul class='tracklist'>
+<!-- <ul class='tracklist'>
     <li>01 Song Name</li>
     <li>02 Song Name</li>
     <li>03 Song Name</li>
-  </ul>
+  </ul> -->
   <canvas id='waveform'></canvas>
 </div>
 
