Safariへの一部機能の対応

--- a/index.html
+++ b/index.html
@@ -8,42 +8,16 @@
 <meta name='description' content="">
 <meta name='author' content="Shinnosuke Watanabe">
 
-<meta property='og:type' content='website' />
-<meta property='og:url' content="" />
-<meta property='og:image' content="" />
-<meta property='og:description' content="" />
-<meta property='og:site_name' content="RE(A)CT - Sound Interaction with HTML5 Web Audio API" />
+<meta property='og:type' content='website'>
+<meta property='og:url' content="">
+<meta property='og:image' content="">
+<meta property='og:description' content="">
+<meta property='og:site_name' content="RE(A)CT - Sound Interaction with HTML5 Web Audio API">
 
-<link href='css/normalize.css' rel='stylesheet' media='screen' />
-<link href='css/styles.css' rel='stylesheet' media='screen' />
+<meta name="format-detection" content="telephone=no">
 
-<script>
-if(typeof chrome === 'undefined'){
-  console.log("WAAPISim (Web Audio API Simulator) Loaded.");
-  document.write(unescape("%3Cscript src='js/waapism.js'%3E%3C/script%3E"));
-} 
-</script>
-
-<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js'></script>
-<script>
-if(typeof jQuery === 'undefined'){
-  console.log("fail to load from CDN");
-  document.write(unescape("%3Cscript src='js/jquery.js'%3E%3C/script%3E"));
-} 
-</script>
-<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
-
-<script src='js/prefixfree.js'></script>
-<script src='js/jquery.easing.min.js'></script>
-<script src='js/jquery-collision.min.js'></script>
-<script src='js/jquery-css-transform.js'></script>
-<script src='js/jquery-animate-css-rotate-scale.js'></script>
-<script src='js/jquery.ba-throttle-debounce.min.js'></script>
-
-<script src='js/mousetrap.min.js'></script>
-<script src='js/buffer-loader.js'></script>
-<script src='js/react.js'></script>
-<script src='js/fullscreen.js'></script>
+<link href='css/normalize.css' rel='stylesheet' media='screen'>
+<link href='css/styles.css' rel='stylesheet' media='screen'>
 
 </head>
 <body>
@@ -102,4 +76,26 @@ if(typeof jQuery === 'undefined'){
   <div id='shortcut'></div>
 </footer>
 
+<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js'></script>
+<script>
+if(typeof jQuery === 'undefined'){
+  console.log("fail to load from CDN");
+  document.write(unescape("%3Cscript src='js/jquery.js'%3E%3C/script%3E"));
+} 
+</script>
+<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
+
+<script src='js/prefixfree.js'></script>
+<script src='js/jquery.easing.min.js'></script>
+<script src='js/jquery-collision.min.js'></script>
+<script src='js/jquery-css-transform.js'></script>
+<script src='js/jquery-animate-css-rotate-scale.js'></script>
+<script src='js/jquery.ba-throttle-debounce.min.js'></script>
+
+<script src='js/mousetrap.min.js'></script>
+<script src='js/buffer-loader.js'></script>
+<script src='js/react.js'></script>
+<script src='js/fullscreen.js'></script>
+
+</body>
 </html>
