support ontouchstart event

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@ if(typeof jQuery === 'undefined'){
 <script src='js/jquery.ba-throttle-debounce.min.js'></script>
 
 <script src='js/mousetrap.min.js'></script>
+<script src='js/base64-binary.js'></script>
 <script src='js/buffer-loader.js'></script>
 <script src='js/react.js'></script>
 <script src='js/fullscreen.js'></script>
