Base64エンコードでの読み込みに対応

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
   <div id='shortcut'></div>
 </footer>
 
+<script src='js/modernizr.js'></script>
 <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js'></script>
 <script>
 if(typeof jQuery === 'undefined'){
