Web Audio APIのiOS向けバッドノウハウの導入

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <meta property='og:description' content="">
 <meta property='og:site_name' content="RE(A)CT - Sound Interaction with HTML5 Web Audio API">
 
+<meta name='viewport' content='width=device-width, initial-scale=1.0'>
+
 <meta name="format-detection" content="telephone=no">
 
 <link href='css/normalize.css' rel='stylesheet' media='screen'>
@@ -92,12 +94,12 @@ if(typeof jQuery === 'undefined'){
 <script src='js/jquery-css-transform.js'></script>
 <script src='js/jquery-animate-css-rotate-scale.js'></script>
 <script src='js/jquery.ba-throttle-debounce.min.js'></script>
+<script src='js/jquery.ui.touch-punch.min.js'></script>
 
 <script src='js/mousetrap.min.js'></script>
 <script src='js/base64-binary.js'></script>
 <script src='js/buffer-loader.js'></script>
-<script src='js/react.js'></script>
 <script src='js/fullscreen.js'></script>
-
+<script src='js/react.js'></script>
 </body>
 </html>
