Page Visibility APIによる一時停止機能の追加

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang='ja'>
 <head>
 <meta charset='utf-8'>
-<title>RE(A)CT - Sound Interaction with HTML5 Web Audio API</title>
+<title>re(a)ct - Sound Interaction with HTML5 Web Audio API</title>
 
 <meta name='keywords' content="HTML5 WEB Audio API JavaScript">
 <meta name='description' content="">
@@ -97,7 +97,6 @@ if(typeof jQuery === 'undefined'){
 <script src='js/jquery.ui.touch-punch.min.js'></script>
 
 <script src='js/mousetrap.min.js'></script>
-<script src='js/base64-binary.js'></script>
 <script src='js/buffer-loader.js'></script>
 <script src='js/fullscreen.js'></script>
 <script src='js/react.js'></script>
