--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
 <meta charset='utf-8'>
 <title>re(a)ct - Sound Interaction with HTML5 Web Audio API</title>
 
-<meta name='keywords' content="HTML5 WEB Audio API JavaScript">
-<meta name='description' content="">
-<meta name='author' content="Shinnosuke Watanabe">
+<meta name='keywords' content='HTML5,Web Audio API,JavaScript'>
+<meta name='description' content='Sound Interaction with HTML5 Web Audio API'>
+<meta name='author' content='Shinnosuke Watanabe'>
 
 <meta property='og:type' content='website'>
-<meta property='og:url' content="">
+<meta property='og:url' content='http://shinnn.github.io/re-a-ct/'>
 <meta property='og:image' content="">
 <meta property='og:description' content="">
 <meta property='og:site_name' content="RE(A)CT - Sound Interaction with HTML5 Web Audio API">
 
 <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-
 <meta name="format-detection" content="telephone=no">
 
 <link href='css/normalize.css' rel='stylesheet' media='screen'>
@@ -78,27 +77,10 @@
   <div id='shortcut'></div>
 </footer>
 
-<script src='js/modernizr.js'></script>
 <script src='https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js'></script>
-<script>
-if(typeof jQuery === 'undefined'){
-  console.log("fail to load from CDN");
-  document.write(unescape("%3Cscript src='js/jquery.js'%3E%3C/script%3E"));
-} 
-</script>
-<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
+<script src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js'></script>
 
-<script src='js/prefixfree.js'></script>
-<script src='js/jquery.easing.min.js'></script>
-<script src='js/jquery-collision.min.js'></script>
-<script src='js/jquery-css-transform.js'></script>
-<script src='js/jquery-animate-css-rotate-scale.js'></script>
-<script src='js/jquery.ba-throttle-debounce.min.js'></script>
-<script src='js/jquery.ui.touch-punch.min.js'></script>
-
-<script src='js/mousetrap.min.js'></script>
-<script src='js/buffer-loader.js'></script>
-<script src='js/fullscreen.js'></script>
-<script src='js/react.js'></script>
+<script src='js/contrib.js'></script>
+<script src='js/re-a-ct.js'></script>
 </body>
 </html>
